# DebateAgent

./: .gitignore  ConfigService.py  LICENSE  PROJECT_STRUCTURE.md  README.md  add_flair.py  affirmative_agent.py  affirmative_prompt_template.txt  check_token.py  debate_ui.py  judge_prompt_template.txt  llm_service.py  negative_agent.py  negative_prompt_template.txt  pyproject.toml  quickstart.sh  reduce_transcript.py  referee_agent.py  referee_option_prompt_template.txt  requirements.txt
client/: README.md  index.html  package-lock.json  package.json
client/src/: App.jsx
client/src/components/: DebateApp.css  DebateApp.jsx
client/src/models/: DebateContext.js
client/src/services/: api.js
serve/: API_README.md  ConfigService.py  DatabaseService.py  TokenService.py  affirmative_agent.py  agent_service.py  debate_api.py  debate_ui.py  list_models.py  llm_service.py  main.py  negative_agent.py  referee_agent.py  test_api_client.py  test_deepseek_agent.py  test_gemini_agent.py  test_openai_agent.py
serve/prompts/: affirmative_prompt_template.txt  judge_prompt_template.txt  negative_prompt_template.txt  summarize_prompt_template.txt  topic_prompt_template.txt
